--- a/grafana-deployment.yaml
+++ b/grafana-deployment.yaml
@@ -28,7 +28,8 @@ spec:
       volumes:
         - name: dashboards
           configMap:
-            name: grafana-dashboards
+            name: grafana-dashboards # Sicherstellen, dass der Name übereinstimmt
+
 ---
 apiVersion: v1
 kind: Service
@@ -40,8 +41,9 @@ spec:
       targetPort: 3000
   selector:
     app: grafana
+
 ---
-apiVersion: apps/v1
+apiVersion: v1
 kind: ConfigMap
 metadata:
   name: grafana-dashboards
