--- a/grafana-deployment.yaml
+++ b/grafana-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: grafana
-          image: grafana/grafana:8.4.3-armv7 # ARM-kompatibles Grafana-Image
+          image: grafana/grafana:8.4.3-armv7 # ARM-kompatibles Grafana-Image für ARMv7
           ports:
             - containerPort: 3000
           env:
@@ -36,10 +36,12 @@ kind: Service
 metadata:
   name: grafana
 spec:
+  type: NodePort # Service-Typ auf NodePort setzen
   ports:
     - name: http # Portname hinzugefügt
-      port: 3000
-      targetPort: 3000
+      port: 3000 # Port innerhalb des Clusters
+      targetPort: 3000 # Port, auf dem der Container hört
+      nodePort: 31000 # NodePort, der auf den Cluster-Knoten zugänglich ist
   selector:
     app: grafana
 
