--- a/grafana-deployment.yaml
+++ b/grafana-deployment.yaml
@@ -1,7 +1,13 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: monitoring
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: grafana
+  namespace: monitoring
   labels:
     app: grafana
 spec:
@@ -21,7 +27,10 @@ spec:
             - containerPort: 3000
           env:
             - name: GF_SECURITY_ADMIN_PASSWORD
-              value: 'admin' # Standard Admin-Passwort, kann geändert werden
+              valueFrom:
+                secretKeyRef:
+                  name: grafana-admin-password # Passwort aus einem Secret beziehen
+                  key: password
           volumeMounts:
             - mountPath: /etc/grafana/provisioning/dashboards
               name: dashboards
@@ -29,27 +38,27 @@ spec:
         - name: dashboards
           configMap:
             name: grafana-dashboards
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: grafana
+  namespace: monitoring
 spec:
-  type: NodePort # Service-Typ auf NodePort setzen
+  type: NodePort # NodePort-Service für externen Zugriff
   ports:
-    - name: http # Portname hinzugefügt
+    - name: http
       port: 3000 # Port innerhalb des Clusters
       targetPort: 3000 # Port, auf dem der Container hört
       nodePort: 31000 # NodePort, der auf den Cluster-Knoten zugänglich ist
   selector:
     app: grafana
-
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: grafana-dashboards
+  namespace: monitoring
 data:
   dashboard1.json: |
     {
@@ -60,3 +69,12 @@ data:
         "panels": []
       }
     }
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: grafana-admin-password
+  namespace: monitoring
+type: Opaque
+data:
+  password: YWRtaW4= # Base64-kodiertes "admin" Passwort (wird in der Produktion empfohlen zu ändern)
